[gd_scene load_steps=3 format=2]

[ext_resource path="res://Script/TitleScreen.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TitleScreen" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="TitleScreen"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="TitleScreen/CenterContainer"]
margin_left = 890.0
margin_top = 467.0
margin_right = 1029.0
margin_bottom = 613.0
rect_min_size = Vector2( 100, 100 )

[node name="TitleScreen" type="Label" parent="TitleScreen/CenterContainer/VBoxContainer"]
margin_right = 139.0
margin_bottom = 14.0
text = "Us & Them (Together)"

[node name="Play" type="Button" parent="TitleScreen/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 139.0
margin_bottom = 38.0

[node name="Exit" type="Button" parent="TitleScreen/CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 139.0
margin_bottom = 62.0

[node name="Languages" type="OptionButton" parent="TitleScreen/CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 139.0
margin_bottom = 86.0
clip_text = true
align = 1
items = [ "", null, false, 0, null, "", null, false, 1, null ]
selected = 0

[node name="Difficulty" type="OptionButton" parent="TitleScreen/CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 139.0
margin_bottom = 110.0
clip_text = true
align = 1
items = [ "", null, false, 0, null, "normal", null, false, 1, null, "Waaagh!", null, false, 2, null ]
selected = 0

[node name="fire" type="Label" parent="TitleScreen/CenterContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 139.0
margin_bottom = 128.0

[node name="fire2" type="Label" parent="TitleScreen/CenterContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 139.0
margin_bottom = 146.0
[connection signal="pressed" from="TitleScreen/CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="TitleScreen/CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="item_selected" from="TitleScreen/CenterContainer/VBoxContainer/Languages" to="." method="_on_Languages_item_selected"]
[connection signal="item_selected" from="TitleScreen/CenterContainer/VBoxContainer/Difficulty" to="." method="_on_Difficulty_item_selected"]
